# torchcodec

src/torchcodec/_core/: AVIOFileLikeContext.cpp  AVIOTensorContext.cpp  AVIOTensorContext.h  BetaCudaDeviceInterface.cpp  BetaCudaDeviceInterface.h  CMakeLists.txt  CUDACommon.cpp  CUDACommon.h  Cache.h  CpuDeviceInterface.cpp  CpuDeviceInterface.h  CudaDeviceInterface.cpp  CudaDeviceInterface.h  DeviceInterface.cpp  DeviceInterface.h  Encoder.cpp  Encoder.h  FFMPEGCommon.cpp  FFMPEGCommon.h  FilterGraph.cpp  FilterGraph.h  Frame.cpp  Frame.h  Metadata.cpp  NVCUVIDRuntimeLoader.cpp  SingleStreamDecoder.cpp  SingleStreamDecoder.h  StableABICompat.h  StreamOptions.h  SwScale.cpp  SwScale.h  Transform.cpp  custom_ops.cpp  ops.py
src/torchcodec/decoders/: _audio_decoder.py
test/: VideoDecoderTest.cpp  test_decoders.py  test_encoders.py  test_ops.py
test/third-party-interface/: ThirdPartyInterfaceTest.cpp
